--- a/src/components/ProductCatalog.module.css
+++ b/src/components/ProductCatalog.module.css
@@ -111,3 +111,10 @@
   text-align: center;
   margin-bottom: 30px;
 }
+
+.noProductsFound {
+  text-align: center;
+  font-size: 1.25rem;
+  color: #000;
+  margin-top: 20px;
+}
