--- a/src/components/ProductCatalog.module.css
+++ b/src/components/ProductCatalog.module.css
@@ -9,9 +9,10 @@
 .header {
   text-align: center;
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: 100;
   margin-bottom: 30px;
   color: #262525;
+  font-family: sans-serif;
 }
 
 .filters {
@@ -31,6 +32,7 @@
   border-radius: 5px;
   background-color: #fff;
   color: #000;
+  font-family: sans-serif;
 }
 
 .searchInput::placeholder {
@@ -45,13 +47,14 @@
   background-color: #fff;
   color: #000;
   min-width: 150px;
+  font-family: sans-serif;
 }
 
 .categorySelect option {
   background-color: #fff;
   color: #000;
   border: 1px solid #c5c0c0;
-
+  font-family: sans-serif;
 }
 
 .productGrid {
@@ -102,6 +105,7 @@
   text-align: center;
   color: #555;
   margin-bottom: 0;
+  font-family: sans-serif;
 }
 
 .productPrice {
@@ -110,6 +114,7 @@
   font-weight: bold;
   text-align: center;
   margin-bottom: 30px;
+  font-family: sans-serif;
 }
 
 .noProductsFound {
@@ -117,7 +122,8 @@
   font-size: 1.25rem;
   color: #000;
   margin-top: 20px;
-  grid-column: span 4; 
-  justify-self: center; 
-  align-self: center; 
+  grid-column: span 4;
+  justify-self: center;
+  align-self: center;
+  font-family: sans-serif;
 }
